# tproject

./: Cargo.toml  README.md
crates/skim-tmux/: Cargo.toml
crates/tp/: Cargo.toml
crates/tp/src/: cli.rs  config.rs  error.rs  main.rs  tmux.rs
example/: config.json
