[package]
name = "tp"
version = "0.1.0"
edition = "2021"
auhtor = "Branco Bruyneel"
about = "Fuzzy search your way through tmux sesions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive", "cargo"] }
git2 = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.48"
skim = "0.10.1"
thiserror = "1.0.37"
walkdir = "2.3.2"
